[tool.poetry]
name = "ibp-neurips19"
version = "0.1.0"
description = "Interval Bound Propagation (NeurIPS 2019)"
authors = ["ModarTensai <ModarTensai@gmail.com>"]
license = "MIT"
packages = [
    { include = "ibp_neurips19", from = "." }
]
include = ["READEME.md"]

[tool.poetry.scripts]
ibp = 'ibp_neurips19:cli.main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
torch = "^1.1"
torchvision = "^0.2.2"
foolbox = "^1.8.0"
tqdm = "^4.31.1"
tb-nightly = {version = "^1.14.0a20190515", allows-prereleases = true}
ipykernel = { version = "^5.1.0", optional = true }

[tool.poetry.extras]
jupyter = ["ipykernel"]

[tool.poetry.dev-dependencies]
yapf = "^0.25.0"
pep8 = "^1.7.1"
pylint = "^2.2.2"
pydocstyle = "^3.0.0"
pytest = "^3.0"
pytest-cov = "^2.6.1"
tox = "^3.7.0"
mkdocs = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
